--- a/build.xml
+++ b/build.xml
@@ -7,6 +7,7 @@
 	
 	<property name="TOMEE_HOME" value="/opt/tomcat/apache-tomee-plus"/>
 	<property name="HTTPD_HOME" value="/opt/tomcat/httpd"/>
+	<property name="ANT_HOME" value="/opt/tomcat/apache-ant"/>
 	<property name="TOMEE_LIB" value="${TOMEE_HOME}/lib"/>
 	<property name="HELIOS_HOME" value="/opt/tomcat/Helios"/>
 	<property name="HELIOS_LIB" value="${HELIOS_HOME}/lib"/>
@@ -245,6 +246,18 @@
 			<arg value="${TOMEE_HOME}"/>
 		</exec>
 		
+		<!-- extract ant -->
+		<exec executable="${HELIOS_HOME}/scripts/deployStructure.pl" failonerror="true" >
+			<arg value="${HELIOS_HOME}/platform/ant/apache-ant-1.9.4-bin.zip"/>
+			<arg value="${ANT_HOME}"/>
+		</exec>
+		
+		<!-- extract httpd -->
+		<exec executable="${HELIOS_HOME}/scripts/deployStructure.pl" failonerror="true" >
+			<arg value="${HELIOS_HOME}/platform/httpd/httpd-2.4.10.tar.gz"/>
+			<arg value="${HTTPD_HOME}"/>
+		</exec>
+		
 		<!-- load sql driver for auth-->
 		<copy file="${HELIOS_HOME}/lib/jtds-1.2.5.jar" todir="${TOMEE_LIB}" verbose="on" overwrite="true"/>
 
@@ -276,6 +289,7 @@
 		<echo>Sleeping so tomcat can shutdown...</echo>
 		<sleep seconds="20" />
 		<delete dir="${TOMEE_HOME}"/>
+		<delete dir="${ANT_HOME}"/>
 	</target>
 	
 	<target name="reinstall" depends="uninstall,install"/>
